fixed layout and added flipping animation

--- a/index.html
+++ b/index.html
@@ -18,71 +18,201 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3"> <h2> TIME: <span id="timer">100 </span> </h2></div>
+            <div class="col-md-3"> <h2> TIME: <span id="timer">02:00 </span> </h2></div>
             <div class="col-md-6"></div>
             <div class="col-md-3 moves"><h2>MOVES: <span id="moves">0</span></h2></div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                        <div class="pic">
-                            <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
-                            <img src="assets/imgs/card-back.png" alt="pic-1" class="m-3 pic pic-value" height="130px" width="130px">
-                            <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
-                            <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
-                            <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
-                        </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="pic">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
+        <div class="row my-2">
+            <div class="col-md-2"></div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="Avatar" class="pic" height="130px" width="130px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/1.jpg" alt="pic-1" class="pic" height="130px" width="130px">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="pic">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="Avatar" class="pic" height="130px" width="130px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/1.jpg" alt="pic-1" class="pic" height="130px" width="130px">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="pic">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="m-3 pic" height="130px" width="130px">
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="Avatar" class="pic" height="130px" width="130px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/2.jpg" alt="pic-2" class="pic" height="130px" width="130px">
+                    </div>
                 </div>
             </div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="Avatar" class="pic" height="130px" width="130px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/2.jpg" alt="pic-2" class="pic" height="130px" width="130px">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="row my-2">
+            <div class="col-md-2"></div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/3.jpg" alt="pic-3" class="pic" height="130px" width="130px">
+                    </div>
+                </div>
+            </div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/3.jpg" alt="pic-3" class="pic" height="130px" width="130px">
+                    </div>
+                </div>
+            </div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/4.jpg" alt="pic-4" class="pic" height="130px" width="130px">
+                    </div>
+                </div>
+            </div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/4.jpg" alt="pic-4" class="pic" height="130px" width="130px">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="row my-2">
+            <div class="col-md-2"></div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/5.jpg" alt="pic-5" class="pic" height="130px" width="130px">
+                    </div>
+                </div>
+            </div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/5.jpg" alt="pic-5" class="pic" height="130px" width="130px">
+                    </div>
+                </div>
+            </div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/6.jpg" alt="pic-6" class="pic" height="130px" width="130px">
+                    </div>
+                </div>
+            </div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/6.jpg" alt="pic-6" class="pic" height="130px" width="130px">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="row my-2">
+            <div class="col-md-2"></div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/7.jpg" alt="pic-7" class="pic" height="130px" width="130px">
+                    </div>
+                </div>
+            </div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/7.jpg" alt="pic-7" class="pic" height="130px" width="130px">
+                    </div>
+                </div>
+            </div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/8.jpg" alt="pic-8" class="pic" height="130px" width="130px">
+                    </div>
+                </div>
+            </div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/8.jpg" alt="pic-8" class="pic" height="130px" width="130px">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
         </div>
         
         <div class="row py-2">
             <div class="col-md-12">
-                <button type="button" class="btn btn-success" onclick="startGame ()">Play</button>
+                <button type="button" class="btn btn-success" id="play">Play</button>
             </div>
         </div>
         <div class="row py-2">
             <div class="col-md-12">
-                <button type="button" class="btn btn-danger">Reset</button>
-            </div>
-        </div>
-        <div class="row py-2">
-            <div class="col-md-12">
-                <button type="button" class="btn btn-primary mx-5">On/Off</button>
+                <button type="button" class="btn btn-danger" id="reset">Reset</button>
             </div>
         </div>
     </div>
+
+    
 </body>
-<script src="assets/js/main.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+<script src="assets/js/timer.js"></script>
 </html>
