--- a/index.html
+++ b/index.html
@@ -22,177 +22,177 @@
             <div class="col-md-6"></div>
             <div class="col-md-3 moves"><h2>MOVES: <span id="moves">0</span></h2></div>
         </div>
-        <div class="row my-2">
+        <div class="row">
             <div class="col-md-2"></div>
             <div class=" col-md-2 flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="assets/imgs/card-back.png" alt="Avatar" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/card-back.png" alt="Avatar" class="pic" height="100px" width="100px">
                     </div>
                     <div class="flip-card-back">
-                        <img src="assets/imgs/1.jpg" alt="pic-1" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/1.jpg" alt="pic-1" class="pic" height="100px" width="100px">
                     </div>
                 </div>
             </div>
             <div class=" col-md-2 flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="assets/imgs/card-back.png" alt="Avatar" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/card-back.png" alt="Avatar" class="pic" height="100px" width="100px">
                     </div>
                     <div class="flip-card-back">
-                        <img src="assets/imgs/1.jpg" alt="pic-1" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/1.jpg" alt="pic-1" class="pic" height="100px" width="100px">
                     </div>
                 </div>
             </div>
             <div class=" col-md-2 flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="assets/imgs/card-back.png" alt="Avatar" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/card-back.png" alt="Avatar" class="pic" height="100px" width="100px">
                     </div>
                     <div class="flip-card-back">
-                        <img src="assets/imgs/2.jpg" alt="pic-2" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/2.jpg" alt="pic-2" class="pic" height="100px" width="100px">
                     </div>
                 </div>
             </div>
             <div class=" col-md-2 flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="assets/imgs/card-back.png" alt="Avatar" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/card-back.png" alt="Avatar" class="pic" height="100px" width="100px">
                     </div>
                     <div class="flip-card-back">
-                        <img src="assets/imgs/2.jpg" alt="pic-2" class="pic" height="130px" width="130px">
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2"></div>
-        </div>
-        <div class="row my-2">
-            <div class="col-md-2"></div>
-            <div class=" col-md-2 flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
-                    </div>
-                    <div class="flip-card-back">
-                        <img src="assets/imgs/3.jpg" alt="pic-3" class="pic" height="130px" width="130px">
-                    </div>
-                </div>
-            </div>
-            <div class=" col-md-2 flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
-                    </div>
-                    <div class="flip-card-back">
-                        <img src="assets/imgs/3.jpg" alt="pic-3" class="pic" height="130px" width="130px">
-                    </div>
-                </div>
-            </div>
-            <div class=" col-md-2 flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
-                    </div>
-                    <div class="flip-card-back">
-                        <img src="assets/imgs/4.jpg" alt="pic-4" class="pic" height="130px" width="130px">
-                    </div>
-                </div>
-            </div>
-            <div class=" col-md-2 flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
-                    </div>
-                    <div class="flip-card-back">
-                        <img src="assets/imgs/4.jpg" alt="pic-4" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/2.jpg" alt="pic-2" class="pic" height="100px" width="100px">
                     </div>
                 </div>
             </div>
             <div class="col-md-2"></div>
         </div>
-        <div class="row my-2">
+        <div class="row">
             <div class="col-md-2"></div>
             <div class=" col-md-2 flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="100px" width="100px">
                     </div>
                     <div class="flip-card-back">
-                        <img src="assets/imgs/5.jpg" alt="pic-5" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/3.jpg" alt="pic-3" class="pic" height="100px" width="100px">
                     </div>
                 </div>
             </div>
             <div class=" col-md-2 flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="100px" width="100px">
                     </div>
                     <div class="flip-card-back">
-                        <img src="assets/imgs/5.jpg" alt="pic-5" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/3.jpg" alt="pic-3" class="pic" height="100px" width="100px">
                     </div>
                 </div>
             </div>
             <div class=" col-md-2 flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="100px" width="100px">
                     </div>
                     <div class="flip-card-back">
-                        <img src="assets/imgs/6.jpg" alt="pic-6" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/4.jpg" alt="pic-4" class="pic" height="100px" width="100px">
                     </div>
                 </div>
             </div>
             <div class=" col-md-2 flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="100px" width="100px">
                     </div>
                     <div class="flip-card-back">
-                        <img src="assets/imgs/6.jpg" alt="pic-6" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/4.jpg" alt="pic-4" class="pic" height="100px" width="100px">
                     </div>
                 </div>
             </div>
             <div class="col-md-2"></div>
         </div>
-        <div class="row my-2">
+        <div class="row">
             <div class="col-md-2"></div>
             <div class=" col-md-2 flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="100px" width="100px">
                     </div>
                     <div class="flip-card-back">
-                        <img src="assets/imgs/7.jpg" alt="pic-7" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/5.jpg" alt="pic-5" class="pic" height="100px" width="100px">
                     </div>
                 </div>
             </div>
             <div class=" col-md-2 flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="100px" width="100px">
                     </div>
                     <div class="flip-card-back">
-                        <img src="assets/imgs/7.jpg" alt="pic-7" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/5.jpg" alt="pic-5" class="pic" height="100px" width="100px">
                     </div>
                 </div>
             </div>
             <div class=" col-md-2 flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="100px" width="100px">
                     </div>
                     <div class="flip-card-back">
-                        <img src="assets/imgs/8.jpg" alt="pic-8" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/6.jpg" alt="pic-6" class="pic" height="100px" width="100px">
                     </div>
                 </div>
             </div>
             <div class=" col-md-2 flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="100px" width="100px">
                     </div>
                     <div class="flip-card-back">
-                        <img src="assets/imgs/8.jpg" alt="pic-8" class="pic" height="130px" width="130px">
+                        <img src="assets/imgs/6.jpg" alt="pic-6" class="pic" height="100px" width="100px">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="100px" width="100px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/7.jpg" alt="pic-7" class="pic" height="100px" width="100px">
+                    </div>
+                </div>
+            </div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="100px" width="100px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/7.jpg" alt="pic-7" class="pic" height="100px" width="100px">
+                    </div>
+                </div>
+            </div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="100px" width="100px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/8.jpg" alt="pic-8" class="pic" height="100px" width="100px">
+                    </div>
+                </div>
+            </div>
+            <div class=" col-md-2 flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/imgs/card-back.png" alt="card-back" class="pic" height="100px" width="100px">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/imgs/8.jpg" alt="pic-8" class="pic" height="100px" width="100px">
                     </div>
                 </div>
             </div>
