--- a/index.html
+++ b/index.html
@@ -214,5 +214,5 @@
     
 </body>
 <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-<script src="assets/js/timer.js"></script>
+<script src="assets/js/main.js"></script>
 </html>
