fixed game container

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Memory Game</title>
 </head>
 <body class="bg-dark">
-    <div class="container game bg-secondary mt-4">
+    <div class="container game-area bg-secondary mt-4">
         <div class="row">
             <div class="col-md-12">
                 <h1>Memory Game</h1>
@@ -22,6 +22,7 @@
             <div class="col-md-6"></div>
             <div class="col-md-3 moves"><h2>MOVES: <span id="moves">0</span></h2></div>
         </div>
+    <span class="game">
         <div class="row">
             <div class="col-md-2"></div>
             <div class=" col-md-2 flip-card">
@@ -198,6 +199,7 @@
             </div>
             <div class="col-md-2"></div>
         </div>
+    </span>
         
         <div class="row py-2">
             <div class="col-md-12">
